<resources>
    <string name="app_name">Agregator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">Агрегатор</string>
    <string name="title_activity_no_net">Отсутствует подключение к интернету</string>
    <string name="no_net">Отсутствует подключение к интернету. Пожалуйста повторите попытку.</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_code">Введите код</string>
    <string name="registry">Регистрация</string>
    <string name="send_sms">Забыли пароль?</string>
    <string name="enter_app">Войти</string>
    <string name="txt_ok">Ок</string>
    <string name="txt_filter">Фильтрация каталога</string>
    <string name="txt_scan_barcode">Сканер штрих-кода</string>
    <string name="get_code">Получить код</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="title_activity_two_registration">Регистрация</string>
    <string name="title_activity_tutorial">Помощь</string>
    <string name="title_activity_personal_profile">Информация о пользователи</string>
    <string name="title_activity_catalog_goods">Каталог товаров</string>
    <string name="title_activity_catalog_goods_list_and_find">Каталог товаров</string>
    <string name="title_activity_product_information">Информация о товаре</string>
    <string name="txt_category">Категория</string>
    <string name="txt_product_name">Наименование товара</string>
    <string name="txt_unit_of_measurement">Единица измерения</string>
    <string name="txt_composition">Состав</string>
    <string name="txt_gmo">Наличие ГМО</string>
    <string name="txt_caloric">Калорийность</string>
    <string name="txt_natural">Натуральность продукта</string>
    <string name="txt_assessment">Всего оценок </string>
    <string name="txt_midle_assessment">Средняя оценка</string>
    <string name="txt_recall">Количество отзывов</string>
    <string name="txt_price">Цена</string>
    <string name="txt_write_recall">Написать отзыв</string>
    <string name="txt_add_product">Добавить товар в список покупок</string>
    <string name="txt_del_product">Удалить товар из списка покупок</string>
    <string name="txt_analitics">Аналитика</string>
    <string name="title_activity_add_price">Добавить цену</string>
    <string name="txt_shop">Магазин</string>
    <string name="txt_adres">Адрес</string>
    <string name="txt_creator">Производитель</string>
    <string name="txt_send">Отправить</string>
    <string name="txt_load_photo">Загрузить фотографию</string>
    <string name="title_activity_add_product">Добавление товара</string>
    <string name="title_activity_shop_list">Список магазинов</string>
    <string name="title_activity_add_shop">Добавить магазин</string>
    <string name="title_activity_shop_info">Информация о магазине</string>
    <string name="title_activity_list_of_shopping_lists">Список списков покупок</string>
    <string name="title_activity_shopping_list">Список покупок</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_rating_product">RatingProductActivity</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>
    <string name="permission_camera_rationale">Необходим доступ к камере</string>
    <string name="no_camera_permission">Невозможно запустить сканирование штрих-кодов, нет доступа к камере.</string>
    <string name="txt_plus_seven">+7</string>
</resources>
