<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.agregator.StartActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number"
        android:id="@+id/textPhoneStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTelephoneNumberStart"
        android:layout_below="@+id/textPhoneStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:elegantTextHeight="false"
        android:layout_alignRight="@+id/textPhoneStart"
        android:layout_alignEnd="@+id/textPhoneStart"
        android:inputType="phone"
        android:maxLength="12"
        android:text="@string/txt_plus_seven" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:id="@+id/textPassStart"
        android:layout_below="@+id/editTelephoneNumberStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassStart"
        android:layout_below="@+id/textPassStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTelephoneNumberStart"
        android:layout_alignEnd="@+id/editTelephoneNumberStart"
        android:password="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registry"
        android:id="@+id/btnRegStart"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickRegistry"
        android:layout_alignRight="@+id/btnGetPassStart"
        android:layout_alignEnd="@+id/btnGetPassStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:id="@+id/btnGetPassStart"
        android:onClick="onClickSmsButton"
        android:layout_below="@+id/btnRegStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_app"
        android:id="@+id/btnEnterStart"
        android:onClick="onClickEnterButton"
        android:layout_below="@+id/btnGetPassStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnGetPassStart"
        android:layout_alignEnd="@+id/btnGetPassStart" />

</RelativeLayout>
