<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.agregator.ShopInfoActivity">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/imgShopInfo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_adres"
        android:id="@+id/textAdressShopInfo"
        android:layout_below="@+id/imgShopInfo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_assessment"
        android:id="@+id/textAllValueShopInfo"
        android:layout_below="@+id/image_about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_recall"
        android:id="@+id/textCountRecall"
        android:layout_toRightOf="@+id/textAdressShopInfo"
        android:layout_toEndOf="@+id/textAdressShopInfo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/btnPlusShopInfo"
        android:layout_alignBaseline="@+id/textAdressShopInfo"
        android:layout_alignBottom="@+id/textAdressShopInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/btnMinusShopInfo"
        android:layout_below="@+id/btnPlusShopInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_write_recall"
        android:id="@+id/btnRecallShopInfo"
        android:layout_below="@+id/btnMinusShopInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
