<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.agregator.AddProductActivity">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image_about"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_name"
        android:id="@+id/textProductNameAddProduct"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_creator"
        android:id="@+id/textCreatorAddProduct"
        android:layout_below="@+id/editProductNameAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_category"
        android:id="@+id/textCategoryAddProduct"
        android:layout_below="@+id/image_about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editProductNameAddProduct"
        android:layout_below="@+id/textProductNameAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/image_about"
        android:layout_alignEnd="@+id/image_about" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCreatorAddProduct"
        android:layout_below="@+id/textCreatorAddProduct"
        android:layout_alignRight="@+id/image_about"
        android:layout_alignEnd="@+id/image_about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCategoryAddProduct"
        android:layout_below="@+id/textCategoryAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/image_about"
        android:layout_alignEnd="@+id/image_about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_unit_of_measurement"
        android:id="@+id/textUnitAddProduct"
        android:layout_below="@+id/editCategoryAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUnitAddProduct"
        android:layout_below="@+id/textUnitAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_load_photo"
        android:id="@+id/btnLoadPhotoAddProduct"
        android:layout_below="@+id/editUnitAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_send"
        android:id="@+id/btnSendAddProduct"
        android:layout_below="@+id/btnLoadPhotoAddProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnLoadPhotoAddProduct"
        android:layout_alignEnd="@+id/btnLoadPhotoAddProduct" />
</RelativeLayout>
